review security for XSS attack

--- a/app/views/blog/post.html.twig
+++ b/app/views/blog/post.html.twig
@@ -53,7 +53,7 @@
                 <img class="single-post-meta-img" src="/../mon-blog/public/assets/img/illustrations/profiles/profile-1.png"/>
                 <div class="single-post-meta-details">
                   <div class="single-post-meta-details-name">Publié par : l'{{ post.authorRole }}</div>
-                  <div class="single-post-meta-details-date">Le, {{ post.createdAt }}</div>
+                  <div class="single-post-meta-details-date">Le, {{ post.updatedAt }}</div>
                 </div>
               </div>
               <div class="single-post-meta-links">
